[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/backgrounds/bg_bureau_pc_mic.png" type="Texture" id=1]
[ext_resource path="res://HUDOffice.gd" type="Script" id=2]
[ext_resource path="res://assets/Begok v15_2015___free.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/icons_ui/cash.png" type="Texture" id=4]
[ext_resource path="res://assets/icons_ui/prestige.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 9
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 19
outline_color = Color( 0.0784314, 0.0666667, 0.0666667, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
outline_color = Color( 0.101961, 0.0901961, 0.0901961, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=8]
size = 14
font_data = ExtResource( 3 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ ExtResource( 15 ), ExtResource( 16 ), ExtResource( 18 ), ExtResource( 23 ), ExtResource( 17 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 24 ), ExtResource( 22 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 10, 14.0924 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 13 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="HUDBureau" type="Node2D"]
position = Vector2( 18.8988, 166.31 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="AffichMissionButton" type="Button" parent="."]
margin_left = 5.03967
margin_top = -68.0
margin_right = 73.0397
margin_bottom = -44.0
custom_fonts/font = SubResource( 1 )
text = "show"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Money" type="Label" parent="."]
margin_left = 19.0
margin_top = 340.0
margin_right = 63.0
margin_bottom = 362.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 2
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Prestige" type="Label" parent="."]
margin_left = 110.0
margin_top = 340.0
margin_right = 150.0
margin_bottom = 360.0
custom_fonts/font = SubResource( 3 )
text = "0"
align = 2
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="FinishMissionButton" type="Button" parent="."]
visible = false
margin_left = 805.962
margin_top = 80.2063
margin_right = 908.962
margin_bottom = 104.206
custom_fonts/font = SubResource( 4 )
text = "valider"
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="NewMission" type="Button" parent="."]
visible = false
margin_left = 373.101
margin_top = 265.69
margin_right = 493.101
margin_bottom = 297.69
text = "new mission"
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="SymboleMoney" type="Sprite" parent="."]
position = Vector2( 85.1012, 345.69 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="SymbolePrestige" type="Sprite" parent="."]
position = Vector2( 157.101, 329.69 )
texture = ExtResource( 5 )
centered = false
__meta__ = {
"_edit_group_": true
}

[node name="Objectifs" type="RichTextLabel" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -5.03967
margin_top = -150.538
margin_right = 106.96
margin_bottom = -88.5377
custom_fonts/mono_font = SubResource( 5 )
custom_fonts/normal_font = SubResource( 6 )
text = "objectif"
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="MissionWaitingLabel" type="Label" parent="."]
margin_left = 277.101
margin_top = -134.31
margin_right = 555.101
margin_bottom = -94.31
custom_fonts/font = SubResource( 7 )
text = "one mission awaiting"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 461.101, 105.69 )
texture = ExtResource( 1 )

[node name="CallClient" type="Label" parent="."]
margin_left = 533.101
margin_top = 313.69
margin_right = 657.101
margin_bottom = 331.69
custom_fonts/font = SubResource( 8 )
text = "call next"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}


[node name="OrdiFerme" type="Sprite" parent="."]
position = Vector2( 330, 242 )
texture = ExtResource( 14 )
__meta__ = {
"_edit_group_": true
}

[node name="OrdiIdle" type="Sprite" parent="."]
position = Vector2( 330, 242 )
texture = ExtResource( 22 )
__meta__ = {
"_edit_group_": true
}

[node name="OrdiAllumage" type="AnimatedSprite" parent="."]
position = Vector2( 330, 242 )
frames = SubResource( 9 )
frame = 1
__meta__ = {
"_edit_group_": true
}

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="ToSystem" type="Area2D" parent="."]
script = ExtResource( 25 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ToSystem"]
position = Vector2( 333, 211 )
scale = Vector2( 8, 3 )
shape = SubResource( 10 )

[node name="OrdiSystem" type="AnimatedSprite" parent="ToSystem"]
position = Vector2( 330, 242 )
frames = SubResource( 11 )
frame = 3
playing = true
__meta__ = {
"_edit_group_": true
}
[connection signal="pressed" from="AffichMissionButton" to="." method="_on_AffichMissionButton_pressed"]
[connection signal="pressed" from="FinishMissionButton" to="." method="_on_FinishMissionButton_pressed"]
[connection signal="pressed" from="NewMission" to="." method="_on_NewMission_pressed"]
[connection signal="animation_finished" from="OrdiAllumage" to="." method="_on_OrdiAllumage_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="click_to_system" from="ToSystem" to="." method="_on_ToSystem_click_to_system"]
